# recast_workflow

./: .gitignore  ARCHITECTURE.md  FAQ.md  PROGRESS.md  README.md  README.rst  TUTORIAL.md  dev_setup.sh  setup.cfg  setup.py
docker/: Dockerfile  build_image.sh
docs/source/: conf.py  index.rst
src/recast_workflow/: definitions.py  inventory.py  scan.py  utils.py  workflow.py
src/recast_workflow/cli/: __init__.py  cli.py  inv.py  make.py  scan.py
src/recast_workflow/images/herwig/: Dockerfile  build.sh  herwig-run.sh
src/recast_workflow/images/madgraph/: Dockerfile  steer_madgraph.py
src/recast_workflow/images/madgraph_pythia/madgraph/: Dockerfile  steer_madgraph.py
src/recast_workflow/images/pythia/: Dockerfile  steer_pythia.py
src/recast_workflow/interfaces/: hepmc.yml  lhe.yml  yoda.yml
src/recast_workflow/subworkflows/generation/madgraph/: description.yml  madgraph.yml  workflow.yml
src/recast_workflow/subworkflows/generation/madgraph_pythia/: description.yml  madgraph.yml  workflow.yml
src/recast_workflow/subworkflows/selection/rivet/: common_inputs.py  step.yml
src/recast_workflow/subworkflows/shower/herwig/: description.yml  herwig.yml  workflow.yml
src/recast_workflow/subworkflows/shower/pythia/: description.yml  pythia.yml  workflow.yml
src/recast_workflow/templates/yadage_dir/: run.sh
tests/cli/: test_cli.py
tests/images/: test_build_utils.py  test_builds.py
tests/scripts/: test_catalogue.py
tests/scripts/workflow/: .test_workflow.py.swp  test_workflow.py
tests/subworkflows/selection/: test_rivet.py
