[metadata]
name = recast_workflow
version = 0.0.1
description = tool for creating Yadage workflows for RECAST
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/scikit-hep/recast_workflow

[bdist_wheel]
universal = 1

[options]
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
package_dir = 
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires = 
    pathlib
    requests
    pyyaml
    click
    click_completion
    yadage

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    recast-wf = recast_workflow.cli:cli
